--- a/secondpage.html
+++ b/secondpage.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Bring the World Together </title>
+  <title> SecondPage </title>
   <link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 
 <body>
 
-  <h1>Simple Headinga</h1>
+  <nav>
+    <ul>
+      <li><
 
-  <p>Simple Changes, hopefully this will work</p>
+  <h1>Second Page</h1>
+
+  <p>Simple</p>
 
 </body>
 
