--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
 <body>
 
+  <nav>
+    <ul>
+      <li></li>
+    </ul>
+  </nav>
+
   <h1>Simple Headinga</h1>
 
   <p>Simple Changes, hopefully this will work</p>
